Update href to point to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="stream-one.html">Stream One</a></li>
+            <li><a href="index.html">Stream One</a></li>
             <li><a href="stream-two.html">Stream Two</a></li>
             <li><a href="stream-three.html">Stream Three</a></li>
         </ul>
@@ -47,7 +47,7 @@
             
             <div class="card">
                 <a href="https://en.wikipedia.org/wiki/GitHub">
-                    <img src="https://en.wikipedia.org/wiki/GitHub#/media/File:GitHub_logo_2013_padded.svg"
+                    <img src="https://image.flaticon.com/icons/svg/25/25231.svg"
                     <h2> Github</h2>
                 </a>
             </div>
